--- a/src/views/account/register.ejs
+++ b/src/views/account/register.ejs
@@ -75,14 +75,14 @@
                             oninput="value=value.replace(/\D/g,'')">
                     </div>
                     <!---->
-                    <!-- <div data-v-51f72da1="" class="item c-row c-row-center c-row-middle m-b-30">
+                    <div data-v-51f72da1="" class="item c-row c-row-center c-row-middle m-b-30">
                         <span data-v-51f72da1="" class="img c-row c-row-middle-center">
                             <img data-v-51f72da1="" height="22px" width="15px" src="/images/smart_phone.png" class="mobile">
                         </span>
                         <input data-v-51f72da1="" type="number" id="otp" placeholder="Mã xác nhận">
-                        <button data-v-51f72da1="" class="otp">OTP</button>
+                        <button data-v-51f72da1="" class="otp">Gửi OTP</button>
                     </div>
-                    <div data-v-51f72da1="" class="tip">Không nhận được mã OTP ?  Vui lòng liên hệ CSKH</div> -->
+                    <div data-v-51f72da1="" class="tip">Không nhận được mã OTP ?  Vui lòng liên hệ CSKH</div>
                     <!---->
                     <div data-v-7ee4aaeb="" class="item c-row c-row-center c-row-middle m-b-30">
                         <span data-v-7ee4aaeb="" class="img c-row c-row-middle-center">
@@ -167,15 +167,15 @@
             setCookie('token', '', 0);
             setCookie('auth', '', 0);
         }
-        // fetch('/api/webapi/GetUserInfo')
-        //     .then(response => response.json())
-        //     .then(data => {
-        //         if (data.status === false) {
-        //             unsetCookie();
-        //             return false;
-        //         };
-        //         location.href = "/";
-        //     });
+        fetch('/api/webapi/GetUserInfo')
+            .then(response => response.json())
+            .then(data => {
+                if (data.status === false) {
+                    unsetCookie();
+                    return false;
+                };
+                location.href = "/";
+            });
     </script>
     <script>
         let i = 1;
@@ -230,7 +230,7 @@
         $('#submit').click(async (e) => { 
             e.preventDefault();
             let username = $('#username').val().trim();
-            // let otp = $('#otp').val().trim();
+            let otp = $('#otp').val().trim();
             let password = $('#password').val().trim();
             let invite = $('#invite').val().trim();
             let checkbox = $('.van-checkbox__icon').hasClass('van-checkbox__icon--checked');
@@ -244,7 +244,7 @@
                         username: username,
                         pwd: password,
                         invitecode: invite,
-                        // otp: otp,
+                        otp: otp,
                     },
                     dataType: "json", 
                     success: function (response) {
@@ -268,29 +268,29 @@
 
         });
 
-        // $('.otp').click(function (e) { 
-        //     e.preventDefault();
-        //     let phone = $('input:eq(0)').val().trim();
-        //     $(this).addClass('block-click');
-        //     setTimeout(() => {
-        //         $(this).removeClass('block-click');
-        //     }, 1600);
-        //     if (phone) {
-        //         $.ajax({
-        //             type: "POST",
-        //             url: "/api/sent/otp/verify",
-        //             data: {
-        //                 phone: phone,
-        //             },
-        //             dataType: "json",
-        //             success: function (response) {
-        //                 alertMess(response.message);
-        //             }
-        //         });
-        //     } else {
-        //         alertMess('Vui lòng điền vào phần được cần thiết');
-        //     }
-        // });
+        $('.otp').click(function (e) { 
+            e.preventDefault();
+            let phone = $('input:eq(0)').val().trim();
+            $(this).addClass('block-click');
+            setTimeout(() => {
+                $(this).removeClass('block-click');
+            }, 1600);
+            if (phone) {
+                $.ajax({
+                    type: "POST",
+                    url: "/api/sent/otp/verify",
+                    data: {
+                        phone: phone,
+                    },
+                    dataType: "json",
+                    success: function (response) {
+                        alertMess(response.message);
+                    }
+                });
+            } else {
+                alertMess('Vui lòng điền vào phần được cần thiết');
+            }
+        });
     </script>
     <script>
         let getWBody = $('.mian').width();
