--- a/src/views/manage/members.ejs
+++ b/src/views/manage/members.ejs
@@ -170,6 +170,8 @@
           <td class="project-actions text-center" style="min-width: 100px">
             <a class="btn btn-primary btn-sm confirm-btn" href="/admin/member/info/${data.phone}">
               <i class="fas fa-folder"></i> Profile</a>
+            <a class="btn btn-primary btn-sm confirm-btn" href="/admin/member/edit/${data.phone}">
+              <i class="fas fa-user"></i> Edit</a>
             ${(data.status == 1) ? `<a class="btn btn-info btn-sm btn-danger" id="${data.id}" href="#">
             <i class="fas fa-pencil-alt"></i> Khóa
             </a>` : ''}
