--- a/src/views/manage/members.ejs
+++ b/src/views/manage/members.ejs
@@ -128,6 +128,54 @@
           </div>
         </section>
       </div>
+
+      <div class="modal fade" id="modal-edit-info" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Chỉnh sửa thông tin</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="mb-2" style="text-align: left !important;">
+                <label>Tài khoản</label>
+                <input class="form-control" id="input-update-account">
+              </div>
+
+              <div class="mb-2" style="text-align: left !important;">
+                <label>Level</label>
+                <input class="form-control" id="input-update-level">
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+              <button type="button" class="btn btn-primary">Cập nhật</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal fade" id="modal-reset-password" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Reset password</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              Reset password
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+              <button type="button" class="btn btn-primary">Cập nhật</button>
+            </div>
+          </div>
+        </div>
+      </div>
   </div> 
   <script src="/plugins/jquery/jquery.min.js"></script>
   <script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -168,8 +216,16 @@
             <span class="badge badge-success">Online</span>
           </td> -->
           <td class="project-actions text-center" style="min-width: 100px">
-            <a class="btn btn-primary btn-sm confirm-btn" href="/admin/member/info/${data.phone}">
-              <i class="fas fa-folder"></i> Profile</a>
+            <a class="btn btn-primary btn-sm confirm-btn" href="/admin/member/info?id=${data.id_user}&p=${data.phone}">
+              <i class="fas fa-folder"></i> Profile
+            </a>
+            <button class="btn btn-primary btn-sm confirm-btn" id="btn-edit-info" data-toggle="modal" data-target="#modal-edit-info">
+              <i class="fa fa-pencil"></i> Chỉnh sửa
+            </button>
+
+            <button class="btn btn-primary btn-sm confirm-btn" data-toggle="modal" data-target="#modal-reset-password">
+              <i class="fas fa-key"></i>Reset password</button> 
+
             ${(data.status == 1) ? `<a class="btn btn-info btn-sm btn-danger" id="${data.id}" href="#">
             <i class="fas fa-pencil-alt"></i> Khóa
             </a>` : ''}
@@ -374,6 +430,12 @@
           });
       }
     });
+
+    $('.btn-edit-info').click(function (e) {
+      e.preventDefault();
+
+      $('.input-u[p]')
+    })
   </script>
 </body>
 
