--- a/src/views/manage/members.ejs
+++ b/src/views/manage/members.ejs
@@ -216,7 +216,7 @@
             <span class="badge badge-success">Online</span>
           </td> -->
           <td class="project-actions text-center" style="min-width: 100px">
-            <a class="btn btn-primary btn-sm confirm-btn" href="/admin/member/info?id=${data.id_user}&p=${data.phone}">
+            <a class="btn btn-primary btn-sm confirm-btn" href="/admin/member/info/${data.phone}">
               <i class="fas fa-folder"></i> Profile
             </a>
             <button class="btn btn-primary btn-sm confirm-btn" id="btn-edit-info" data-toggle="modal" data-target="#modal-edit-info">
